# ChangeLog for app-editors/kile
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/kile/ChangeLog,v 1.130 2009/12/28 20:54:59 maekke Exp $

  28 Dec 2009; Markus Meier <maekke@gentoo.org> kile-2.1_beta3.ebuild:
  x86 stable, bug #294349

  24 Dec 2009; Pacho Ramos <pacho@gentoo.org> kile-2.1_beta3.ebuild:
  amd64 stable, bug 294349

  15 Dec 2009; Brent Baude <ranger@gentoo.org> kile-2.1_beta3.ebuild:
  Marking kile-2.1_beta3 ppc64 for bug 292808

  30 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  kile-2.1_beta3.ebuild:
  Fix handbook install.

*kile-2.1_beta3 (29 Nov 2009)

  29 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +kile-2.1_beta3.ebuild:
  Version bump. Fixes bug #295098.

  16 Nov 2009; Markus Meier <maekke@gentoo.org> kile-2.1_beta2.ebuild:
  amd64/x86 stable, bug #292808

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> kile-2.1_beta2.ebuild:
  Marked ~hppa (bug #292808).

  25 Oct 2009; Jonathan Callen <abcd@gentoo.org> kile-2.0.3-r1.ebuild:
  Move some optional runtime deps to elogs in pkg_postinst

*kile-2.1_beta2 (22 Oct 2009)

  22 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kile-2.1_beta2.ebuild:
  Initial commit for KDE4 (from kde-overlay).

  23 Jun 2009; Tomáš Chvátal <scarabeus@gentoo.org> -kile-2.0.ebuild,
  -files/kile-2.0-desktopentry.patch:
  Remove old.

  19 Jun 2009; Brent Baude <ranger@gentoo.org> kile-2.0.3-r1.ebuild:
  Marking kile-2.0.3-r1 ppc64 for bug 250349

  14 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org> kile-2.0.ebuild,
  kile-2.0.3-r1.ebuild:
  Changed Slot to 3.5

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> kile-2.0.3-r1.ebuild:
  Stable for HPPA (bug #250349).

  06 Jun 2009; nixnut <nixnut@gentoo.org> kile-2.0.3-r1.ebuild:
  ppc stable #250349

  01 Jun 2009; Ferris McCormick <fmccor@gentoo.org> kile-2.0.3-r1.ebuild:
  Sparc stable, Bug #250349.

  01 Jun 2009; Markus Meier <maekke@gentoo.org> kile-2.0.3-r1.ebuild: